# Atlas-SMR-Application

./: Cargo.toml  README.md
.github/actions/checkout-dependencies/: action.yml
.github/workflows/: pull-request.yaml
src/: lib.rs
src/app/: mod.rs
src/serialize/: mod.rs
src/state/: mod.rs
src/state/divisible_state/: mod.rs
src/state/monolithic_state/: mod.rs
