[package]
name = "atlas-smr-application"
version = "0.1.0"
edition = "2021"
description = "The atlas SMR application layer. Defines the necessary traits the application developer should implement in order to utilize this framework for developing BFT SMR applications"
authors = ["Nuno Neto <up201703898@fc.up.pt>"]
license = "MIT"
homepage = "https://github.com/nuno1212s/febft"
repository = "https://github.com/nuno1212s/febft"
documentation = "https://docs.rs/febft"
readme = "README.md"

[features]

serialize_capnp = []
serialize_serde = ["serde"]

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
atlas-common = { path = "../Atlas-Common" }
atlas-communication = { path = "../Atlas-Communication" }
atlas-metrics = {path = "../Atlas-Metrics" }
serde = { version = "*", optional = true }